[package]
name = "ryexec"
version = "0.1.0"
edition = "2021"
authors = ["Sajid Al Nahian <enderdreams@outlook.com>"]
description = "Execute Python functions from Rust"
repository = "https://github.com/notenderdreams/ryexec"
license = "MIT"
keywords = ["python", "execute", "bridge", "pyo3"]
categories = ["api-bindings", "development-tools"]
readme = "README.md"


[lib]
name = "ryexec"
path = "src/lib.rs"


[dependencies]
pyo3 = { version = "0.19", features = ["auto-initialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.12"

